fix on-click on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,8 @@ td {
 }
 
 .buttons {
-  height: 40px;
-  width: 220px;
+  height: 44px;
+  width: 224px;
   margin: 20px auto;
 }
 button {
